<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ge.research.sadl.darpa.aske.dialog</groupId>
  <artifactId>com.ge.research.sadl.darpa.aske.dialog.parent</artifactId>
  <version>1.1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>com.ge.research.sadl.darpa.aske.dialog</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.dependencies</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.feature</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ide</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.tests</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ui</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.ui.tests</module>
    <module>com.ge.research.sadl.darpa.aske.dialog.update</module>
  </modules>

  <!-- Set all properties here -->
  <properties>
    <dep.mwe2.version>2.12.0</dep.mwe2.version>
    <dep.sadl.version>3.5.0-SNAPSHOT</dep.sadl.version>
    <dep.surefire.version>3.0.0-M5</dep.surefire.version>
    <dep.tycho.version>2.3.0</dep.tycho.version>
    <dep.xtext-antlr.version>2.1.1</dep.xtext-antlr.version>
    <dep.xtext.version>2.24.0</dep.xtext.version>
    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
    <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <!-- Set all dependency versions here -->
  <dependencyManagement>
    <dependencies>
      <!-- Import Xtext dependencies from Xtext BOM -->
      <dependency>
        <groupId>org.eclipse.xtext</groupId>
        <artifactId>xtext-dev-bom</artifactId>
        <version>${dep.xtext.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <!-- Set all plugin versions here -->
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.github.ekryd.sortpom</groupId>
          <artifactId>sortpom-maven-plugin</artifactId>
          <version>3.0.0</version>
          <configuration>
            <createBackupFile>false</createBackupFile>
            <indentSchemaLocation>true</indentSchemaLocation>
            <lineSeparator>\n</lineSeparator>
            <predefinedSortOrder>custom_1</predefinedSortOrder>
            <sortDependencies>scope,groupId,artifactId</sortDependencies>
            <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
            <sortModules>true</sortModules>
            <sortPlugins>groupId,artifactId</sortPlugins>
            <sortProperties>true</sortProperties>
          </configuration>
          <executions>
            <execution>
              <id>default-sort</id>
              <goals>
                <goal>sort</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>eu.somatik.serviceloader-maven-plugin</groupId>
          <artifactId>serviceloader-maven-plugin</artifactId>
          <version>1.3.1</version>
          <executions>
            <execution>
              <id>default-generate</id>
              <goals>
                <goal>generate</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
          <!-- Clean all files built by Tycho -->
          <configuration>
            <filesets>
              <fileset>
                <directory>${basedir}</directory>
                <includes>
                  <include>plugin.xml_gen</include>
                </includes>
              </fileset>
              <fileset>
                <directory>model/generated</directory>
              </fileset>
              <fileset>
                <directory>src-gen</directory>
              </fileset>
              <fileset>
                <directory>xtend-gen</directory>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <compilerArgs>
              <arg>-Xlint:all</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.0.0-M3</version>
          <configuration>
            <rules>
              <requireMavenVersion>
                <version>[3.6.3,)</version>
              </requireMavenVersion>
            </rules>
          </configuration>
          <executions>
            <execution>
              <id>default-enforce</id>
              <goals>
                <goal>enforce</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-failsafe-plugin</artifactId>
          <version>${dep.surefire.version}</version>
          <configuration>
            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0-M1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.2.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.9.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>default-jar-no-fork</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${dep.surefire.version}</version>
          <configuration>
            <argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.0.0</version>
          <dependencies>
            <dependency>
              <groupId>com.ge.research.sadl</groupId>
              <artifactId>com.ge.research.sadl.log4j.conf</artifactId>
              <version>${dep.sadl.version}</version>
            </dependency>
            <dependency>
              <groupId>com.ge.research.sadl</groupId>
              <artifactId>com.ge.research.sadl.xtextgenerator</artifactId>
              <version>${dep.sadl.version}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.emf</groupId>
              <artifactId>org.eclipse.emf.mwe2.launch</artifactId>
              <version>${dep.mwe2.version}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.xtext</groupId>
              <artifactId>org.eclipse.xtext.common.types</artifactId>
              <version>${dep.xtext.version}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.xtext</groupId>
              <artifactId>org.eclipse.xtext.xtext.generator</artifactId>
              <version>${dep.xtext.version}</version>
            </dependency>
            <dependency>
              <groupId>org.eclipse.xtext</groupId>
              <artifactId>xtext-antlr-generator</artifactId>
              <version>${dep.xtext-antlr.version}</version>
            </dependency>
          </dependencies>
          <executions>
            <execution>
              <?m2e ignore?>
              <id>default-java</id>
              <goals>
                <goal>java</goal>
              </goals>
              <phase>generate-sources</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.8.1</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>target-platform-configuration</artifactId>
          <version>${dep.tycho.version}</version>
          <configuration>
            <environments>
              <environment>
                <os>linux</os>
                <ws>gtk</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>macosx</os>
                <ws>cocoa</ws>
                <arch>x86_64</arch>
              </environment>
              <environment>
                <os>win32</os>
                <ws>win32</ws>
                <arch>x86_64</arch>
              </environment>
            </environments>
            <!-- Use same target platform as SADL -->
            <target>
              <artifact>
                <groupId>com.ge.research.sadl</groupId>
                <artifactId>com.ge.research.sadl.target</artifactId>
                <version>${dep.sadl.version}</version>
              </artifact>
            </target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <configuration>
            <compilerArgument>-err:-forbidden</compilerArgument>
            <useProjectSettings>false</useProjectSettings>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-maven-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <extensions>true</extensions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-director-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <executions>
            <execution>
              <id>default-materialize-products</id>
              <goals>
                <goal>materialize-products</goal>
              </goals>
            </execution>
            <execution>
              <id>default-archive-products</id>
              <goals>
                <goal>archive-products</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <executions>
            <execution>
              <id>default-p2-metadata</id>
              <goals>
                <goal>p2-metadata</goal>
              </goals>
              <phase>package</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-publisher-plugin</artifactId>
          <version>${dep.tycho.version}</version>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-p2-repository-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <configuration>
            <includeAllDependencies>true</includeAllDependencies>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-packaging-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <configuration>
            <!-- Replace SNAPSHOT version when packaging the final product -->
            <finalName>${project.artifactId}_${unqualifiedVersion}.${buildQualifier}</finalName>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-source-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <executions>
            <execution>
              <id>default-plugin-source</id>
              <goals>
                <goal>plugin-source</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <!-- To skip running (and compiling) tests, use: -Dmaven.test.skip
             To skip tests, but still compile them, use: -DskipTests
             To run all tests but only fail at end, use: -fae -->
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${dep.tycho.version}</version>
          <configuration>
            <failIfNoTests>false</failIfNoTests>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.xtend</groupId>
          <artifactId>xtend-maven-plugin</artifactId>
          <version>${dep.xtext.version}</version>
          <configuration>
            <outputDirectory>${basedir}/xtend-gen</outputDirectory>
            <testOutputDirectory>${basedir}/xtend-gen</testOutputDirectory>
          </configuration>
          <executions>
            <execution>
              <id>default-compile</id>
              <goals>
                <goal>compile</goal>
              </goals>
            </execution>
            <execution>
              <id>default-xtend-install-debug-info</id>
              <goals>
                <goal>xtend-install-debug-info</goal>
              </goals>
            </execution>
            <execution>
              <id>default-testCompile</id>
              <goals>
                <goal>testCompile</goal>
              </goals>
            </execution>
            <execution>
              <id>default-xtend-test-install-debug-info</id>
              <goals>
                <goal>xtend-test-install-debug-info</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!-- Keep our poms looking tidy -->
      <plugin>
        <groupId>com.github.ekryd.sortpom</groupId>
        <artifactId>sortpom-maven-plugin</artifactId>
      </plugin>
      <!-- Enforce Maven version -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
      </plugin>
      <!-- Define our Eclipse target platform -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
      </plugin>
      <!-- Build OSGI bundles -->
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <extensions>true</extensions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jdk9-or-newer</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
      </properties>
    </profile>
  </profiles>
</project>
